# inbox-page

./: README.md
.github/actions/install/: action.yaml
.github/workflows/: deploy_fe.yaml
engine/: .env.template  .gitignore  Cargo.toml  Makefile  README.md  compose.dev.yml  docker-compose.dev.yml  realm-export.json
engine/migrations/: 20240320000000_create_users_table.sql
engine/scripts/: init-db.sh
engine/src/: main.rs  state.rs
engine/src/database/: mod.rs  user.rs
engine/src/routes/: health.rs  mod.rs
engine/src/routes/auth/: challenge.rs  me.rs  mod.rs  oauth.rs
engine/src/routes/auth/oauth/: auth_token.rs  auth_uri.rs  middleware.rs  mod.rs
ingress/: Cargo.toml
ingress/src/: main.rs  state.rs
web/: .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: index.css  index.tsx  routeTree.gen.ts
web/src/components/ui/: Button.tsx  Input.tsx
web/src/hooks/: useHealthchecks.tsx  useInboxAccount.tsx  useInstanceConfig.ts
web/src/routes/: __root.tsx  debug.lazy.tsx  index.lazy.tsx  login.tsx
web/src/routes/$mail/: index.tsx
web/src/routes/configure/: _layout.index.tsx  _layout.tsx
web/src/routes/configure/_layout.instance/: healthcheck.tsx  index.tsx
web/src/routes/configure/instance/: index.tsx
web/src/routes/login/: _layout.callback.tsx  _layout.create.lazy.tsx  _layout.index.tsx  _layout.tsx
web/src/utils/: authwall.ts  cva.ts  useFetchAuthChallenge.ts
