[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
poem = "3.0.4"
rand = "0.8.5"
serde = "1.0.209"
serde_json = "1.0.127"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "time", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
