[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
openid = "0.15.0"
poem = "3.0.4"
rand = "0.8.5"
serde = "1.0.209"
serde_json = "1.0.127"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "time", "migrate"] }
thiserror = "2.0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
