[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
imap = "3.0.0-alpha.14"
regex = "1.10.6"
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4"] }
